@@ -1316,6 +1316,17 @@ Subject length lower bound = 3
  0: ab\x0a
  0+ cd
 
+/^/gm,newline=any
+    a\rb\nc\r\nxyz\=aftertext
+ 0: 
+ 0+ a\x0db\x0ac\x0d\x0axyz
+ 0: 
+ 0+ b\x0ac\x0d\x0axyz
+ 0: 
+ 0+ c\x0d\x0axyz
+ 0: 
+ 0+ xyz
+
 /abc/I
 Capturing subpattern count = 0
 First code unit = 'a'
@@ -14841,5 +14852,23 @@ Subject length lower bound = 0
 Capturing subpattern count = 1
 May match empty string
 Subject length lower bound = 0
+
+# Test CRLF handling in empty string substitutions
+
+/^$/gm,newline=anycrlf,replace=-
+    X\r\n\r\nY
+ 1: X\x0d\x0a-\x0d\x0aY
+
+/^$/gm,newline=crlf,replace=-
+    X\r\n\r\nY
+ 1: X\x0d\x0a-\x0d\x0aY
+
+/^$/gm,newline=any,replace=-
+    X\r\n\r\nY
+ 1: X\x0d\x0a-\x0d\x0aY
+
+"(*ANYCRLF)(?m)^(.*[^0-9\r\n].*|)$"g,replace=NaN
+    15\r\nfoo\r\n20\r\nbar\r\nbaz\r\n\r\n20
+ 4: 15\x0d\x0aNaN\x0d\x0a20\x0d\x0aNaN\x0d\x0aNaN\x0d\x0aNaN\x0d\x0a20
 
 # End of testinput2 
